snapshots/syntax/statements/objects/set/set_statement_with_function_call.snap
---
source: src/syntax/statements/objects/set.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: SetStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: SetKeyword
                  text: Set
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: result
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: GetObject
                - kind: LeftParenthesis
                  text: (
                - kind: StringLiteral
                  text: "\"WinMgmts:\""
                - kind: RightParenthesis
                  text: )
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
